# ChangeLog for net-im/skype
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.98 2009/01/15 03:09:31 tester Exp $

*skype-2.0.0.72 (15 Jan 2009)

  15 Jan 2009; Olivier Crête <tester@gentoo.org> +skype-2.0.0.72.ebuild:
  Version bump

  11 Aug 2008; Ben de Groot <yngwin@gentoo.org> skype-2.0.0.63.ebuild,
  skype-2.0.0.68.ebuild:
  Fix split qt4 deps and use check wrt bug 217161.

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.

  28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> skype-1.4.0.118.ebuild,
  skype-2.0.0.63.ebuild, skype-2.0.0.68.ebuild:
  QA: Get rid of deprecated qt4_min_version(). Please fix your ebuilds to
  support split Qt 4.4 dependencies, cf. bug 217161 comment 11.

  11 Apr 2008; Markus Meier <maekke@gentoo.org> skype-2.0.0.63.ebuild:
  amd64 stable, bug #215228

*skype-2.0.0.68 (03 Apr 2008)

  03 Apr 2008; Gustavo Felisberto <humpback@gentoo.org>
  +skype-2.0.0.68.ebuild:
  Added 2.0.0.68. Closes bug #215487.

  29 Mar 2008; Dawid Węgliński <cla@gentoo.org> skype-2.0.0.63.ebuild:
  Stable on x86 (bug #215228)

  17 Mar 2008; Gustavo Felisberto <humpback@gentoo.org>
  skype-2.0.0.63.ebuild:
  Removed dev-libs/libsigc++-2 dep. Fixed bug #209811

  17 Mar 2008; Gustavo Felisberto <humpback@gentoo.org>
  skype-2.0.0.63.ebuild:
  Added dep on libXv, lets see if it closes bug #213575

*skype-2.0.0.63 (14 Mar 2008)

  14 Mar 2008; Gustavo Felisberto <humpback@gentoo.org>
  -skype-2.0.0.27.ebuild, -skype-2.0.0.43.ebuild, +skype-2.0.0.63.ebuild:
  Removed beta versions and added the first version with video. This version
  is no longer masked.

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> skype-1.4.0.118.ebuild,
  skype-2.0.0.27.ebuild, skype-2.0.0.43.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

*skype-2.0.0.43 (06 Feb 2008)
