@@ -1,30 +1,23 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX sDaemonWrapper-r1 2156 RMD160 29aa71c39c0e6049d9073f1a37b4548d76195248 SHA1 c2fe043de8bf0eb7e5666b90ab849710d16aa72f SHA256 997724ef746507af4f2255ee33d93316101dd072388807103cab98172282a4a8
 AUX skype-callto-handler 1813 RMD160 c9d6ebefac813587b294c561808729ab15aafe70 SHA1 1d8d214b7c4aab9125bc02e8ccebd8818a33c7e5 SHA256 dc004f93e107622910980acf6d132ee603e12e294ca35870e3a04184db64ae3c
 AUX skype.debus.config 436 RMD160 ec47725458e05cca8e37316989f473963b5b654d SHA1 e0a969c12264ac2657491f8533f0349fc8a8d4f0 SHA256 6de68b9e62afd284f1d7d5899fc5747de2be2c18a96022130826917625941ea2
-AUX skype.sh 243 RMD160 994fb89dc4c9e5f205de1d552695a0f63a184fb3 SHA1 a973105cc69d7add1978d0fb11800349a34431c1 SHA256 cbd934a18023e014ca34b78b33fbbeb3ddd340f14c79619871c3a39395b91594
-DIST libsigc++20-2.0.17-1-from-fc5.rf.i386.tar.gz 7845 RMD160 e66d772cc6548fce1681febab7fbfa0846c9b910 SHA1 a3a048249c0eaef77bd7bce28cf0f98c42327c21 SHA256 066422155ddb13eb6882fcd8d253460edcf4ee3961706ff027be90136aee7d56
-DIST skype-1.4.0.118.tar.bz2 13200492 RMD160 7dc762c99e47de4c5f43ea78723a4444722c84ca SHA1 8bf7737086702adbd276f081aad3bfe00ea8e22c SHA256 fbbcaf65a74bc7c13ad953fc17d219ad56b23da933e59e493d10bf0215662613
 DIST skype-2.0.0.63.tar.bz2 15050614 RMD160 aafe02b72cdfc0d734c593a88e4e66762cec375a SHA1 a787c6541aa1313f4600eb635b06ef808c11affa SHA256 48ec096f8cd55e66120b02e8c513acfaf4d40e62c8d4c1d54582088991c52cee
 DIST skype-2.0.0.68.tar.bz2 15077724 RMD160 479dac228ff2c975d35d56d8e8b12019ebed33bd SHA1 ebfa97fe6a3e0eb1eaf30a207b5c34995619efbf SHA256 92230ddae4adec19f6a6f07d7b0a2e122f40dcfe8131a45b4687078ea8ea1ec0
 DIST skype-2.0.0.72.tar.bz2 15104486 RMD160 ab8ad304c6739cb68ad3420b9da89abc97ca5588 SHA1 554a2d2fdf0b2291692ed84c2d862bc80b8a6b26 SHA256 d3087571ab206729e6628986eb485e48204f5f1f0ed3f28326c376d86d583fe8
-DIST skype-lang-1.4.0.118.tar.bz2 261369 RMD160 0469c735da70459f39eb56a2b14afb1d8d8206da SHA1 344a73a10376f3b1d5b77b9adadb15405ccaede5 SHA256 d2421894d6933a4e658b69c9d00c3eb3728aa26ec82acda537159516b3636cce
-DIST skype_static-1.4.0.118.tar.bz2 19582287 RMD160 39f95c35e6dc483fde6a5b6b3688160338fda594 SHA1 19d1a9581b8f97a88f2196bd32c493406cea79d3 SHA256 1293f54811a36b2a1b83c56a4ad2844e58c753fe39b61422fac66b001d0f9e0c
 DIST skype_static-2.0.0.63.tar.bz2 21568615 RMD160 4a53cad35e0983ea332e314ca9ac621cd6c686ae SHA1 2ccb2b28bc692a82930c44e215ba58caac0d9e7a SHA256 e14b9c6faae3e55fd5dc4c6253fa7c2781418d532d75554928f5fd6c086ce736
 DIST skype_static-2.0.0.68.tar.bz2 21590097 RMD160 5d2382b2df198fd9aa2f61336a24fbba07e7b520 SHA1 30e96181ff019fd490e4666df640d2a04350f1a1 SHA256 846c979d6e06c0062b9876e2fcda5c1ef1f545e16eb8c828eb17738456885253
 DIST skype_static-2.0.0.72.tar.bz2 21613953 RMD160 fcadcbb30eeea2e548771984b38884d23d461f7f SHA1 bc69854b5cc83e2e92c91f9a5b7688a00dc7ce7e SHA256 2f37963e8f19c0ec5efd8631abe9633b6551f09dee024460c40fad10728bc580
-EBUILD skype-1.4.0.118.ebuild 3714 RMD160 bf7b3680b58d0ec46a6e87a3657ae4745e9e77d1 SHA1 51ab991c34f6e4f69fce4de3967dede615cc16b1 SHA256 557af4ed10868ad92de1caf61a52d8557dc1854c1d315ee2503a6b180a004a30
 EBUILD skype-2.0.0.63.ebuild 3100 RMD160 700a64ed223f80c1e901b5445d4c05cda629ab44 SHA1 58dc73ea2eebe87bbb1d41d04f6177d811b212f0 SHA256 afa4f28e9524649bcff8ed679e0bf3265281da7e1c0402e83f432a2b280fb4c7
 EBUILD skype-2.0.0.68.ebuild 3102 RMD160 fd3b50e701a744f94423b813276bacf58043fd15 SHA1 da1b1a05314a340c803cdbb8354c07b1bdd6f743 SHA256 73e0acbb6ff83569472deb8398e8f7beb3672c065ca365b5d4c773ba98feb44a
 EBUILD skype-2.0.0.72.ebuild 2636 RMD160 ab1612297559da08f8a0ed67620c1591aa4a7aeb SHA1 f9ed21076630eb1556925b5758767c4650412d49 SHA256 996c830228c33958ab83d565b8a42c79eba1de75e661b0b867f7c46573adcceb
-MISC ChangeLog 18249 RMD160 4ff45b463c67b97d8742e26093c3eab3a9432270 SHA1 68d98f62450a251011da412f45fa644340d4e4ed SHA256 11b62ae9515a0490efb53ed344711fc890387faa830441e1c733572f50802671
+MISC ChangeLog 18404 RMD160 58c2300506381a3020ef3ae7b9c87489fdf9f820 SHA1 f9d90cb05833f9011d11bca4923e0936a7343ca9 SHA256 8981c369a0b37fa17bb0573321bb40543ba1cd47d7209b1ff0d2987e69f661ea
 MISC metadata.xml 574 RMD160 8b4dbbc23a0cdff6e73ace07c8aaff5ac6bb1e49 SHA1 474a65946ca1d57f50b123d4f6f6518ab6106553 SHA256 ba7224ee8e985051a464944ba62227ff7e9364df9be83270ac0075b2e95b2ef0
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkluqPEACgkQmOfEJZHYOKdhAgCfe2l7UjXtlBUyTIOzIRWnWl6Z
-rG0An0ltpq9PdQXvqNGav5T/yBP16ezN
-=HUgS
+iEYEARECAAYFAkluq/gACgkQmOfEJZHYOKcmXwCeL7okna035bfe3UJp6Gm8pYen
+A1UAn23fnj4PrHs6pI7IGKf2qctgcy1t
+=yaIm
 -----END PGP SIGNATURE-----
