@@ -1,6 +1,10 @@
 # ChangeLog for net-im/skype
 # Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.98 2009/01/15 03:09:31 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/skype/ChangeLog,v 1.99 2009/01/15 03:22:26 tester Exp $
+
+  15 Jan 2009; Olivier Crête <tester@gentoo.org> -files/sDaemonWrapper-r1,
+  -files/skype.sh, -skype-1.4.0.118.ebuild:
+  Remove old version, bug #213786
 
 *skype-2.0.0.72 (15 Jan 2009)
 
